[TSLA-8123] Implement metadata api handler (#72)
