# cc-dashboard-query-api/pkg/internal/handler/handler.go
@@ -1,25 +1,22 @@
 package handler
 
 import (
-	"fmt"
 	"net/http"
-	"regexp"
 	"runtime/debug"
-	"strings"
 
 	jsoniter "github.com/json-iterator/go"
 	"github.com/julienschmidt/httprouter"
-	"github.com/swaggest/openapi-go/openapi3"
 
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/client"
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/handler/middleware/cors"
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/security"
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/svc/auth"
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/svc/collections"
+	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/svc/metadata"
 	"github.com/tigera/calico-cloud/cc-dashboard-query-api/pkg/internal/svc/query"
-	"github.com/tigera/tds-apiserver/lib/httpreply"
 	"github.com/tigera/tds-apiserver/lib/logging"
 	"github.com/tigera/tds-apiserver/pkg/http/handleradapters"
+	"github.com/tigera/tds-apiserver/pkg/types"
 )
 
 var json = jsoniter.ConfigCompatibleWithStandardLibrary
@@ -29,6 +26,7 @@ func NewHandler(
 	corsOrigins []string,
 	authService *auth.AuthService,
 	queryService *query.QueryService,
+	metadataService *metadata.MetadataService,
 	collectionsService *collections.CollectionsService,
 ) (handleradapters.RootRegistry, error) {
 
@@ -61,6 +59,9 @@ func NewHandler(
 		handleradapters.WithSpecDescription("Dashboard Query API for Calico Cloud"),
 	)
 
+	withRequiredProjectIDHeader := handleradapters.WithRequiredHeader[types.ProjectID]("x-project-id",
+		handleradapters.WithParamDescription("Organization Project ID"))
+
 	reg.Group("Query").Apply(func(reg handleradapters.Registry) {
 
 		reg.POST("/query", handleradapters.In2Out1(queryService.Query,
@@ -78,72 +79,39 @@ func NewHandler(
 		))
 	})
 
+	reg.Group("Metadata").Apply(func(reg handleradapters.Registry) {
+
+		withDashboardID := handleradapters.WithPathParam[types.DashboardID]("dashboardID", handleradapters.WithParamDescription("Dashboard ID"))
+
+		reg.GET("/metadata/:dashboardID", handleradapters.In3Out1(metadataService.Get,
+			withAuthContext(),
+			withRequiredProjectIDHeader,
+			withDashboardID,
+			handleradapters.WithRespBody[client.Dashboard]()))
+
+		reg.GET("/metadata", handleradapters.In2Out1(metadataService.List,
+			withAuthContext(),
+			withRequiredProjectIDHeader,
+			handleradapters.WithRespBody[client.DashboardListResponse]()))
+
+		reg.POST("/metadata", handleradapters.In3Out1(metadataService.Create,
+			withAuthContext(),
+			withRequiredProjectIDHeader,
+			handleradapters.WithReqBody[client.DashboardCreateRequest](),
+			handleradapters.WithRespBody[client.Dashboard]()))
+
+		reg.PUT("/metadata/:dashboardID", handleradapters.In4Out1(metadataService.Update,
+			withAuthContext(),
+			withRequiredProjectIDHeader,
+			withDashboardID,
+			handleradapters.WithReqBody[client.DashboardUpdateRequest](),
+			handleradapters.WithRespBody[client.Dashboard]()))
+
+		reg.DELETE("/metadata/:dashboardID", handleradapters.In3Out0(metadataService.Delete,
+			withAuthContext(),
+			withRequiredProjectIDHeader,
+			withDashboardID))
+	})
+
 	return reg, nil
-}
-
-func withQueryResponseWriter(logger logging.Logger) handleradapters.ResponseBodyMapper[client.QueryResponse] {
-	defaultMapper := handleradapters.WithRespBody[client.QueryResponse]()
-	return queryResponseWriterBodyMapper[client.QueryResponse]{logger: logger, defaultMapper: defaultMapper}
-}
-
-type queryResponseWriterBodyMapper[T client.QueryResponse] struct {
-	logger        logging.Logger
-	defaultMapper handleradapters.ResponseBodyMapper[client.QueryResponse]
-}
-
-var (
-	reAcceptHeaderCSVColumns  = regexp.MustCompile(`;\s*columns="([^"]+)"`)
-	reAcceptHeaderCSVFilename = regexp.MustCompile(`;\s*filename="([^"]+)"`)
-)
-
-func (m queryResponseWriterBodyMapper[T]) Map(resp client.QueryResponse, w http.ResponseWriter, r *http.Request) {
-	acceptHeader := r.Header.Get("Accept")
-
-	if strings.HasPrefix(acceptHeader, "text/csv") {
-		matchColumns := reAcceptHeaderCSVColumns.FindStringSubmatch(acceptHeader)
-		matchFilename := reAcceptHeaderCSVFilename.FindStringSubmatch(acceptHeader)
-
-		if len(matchFilename) != 2 {
-			message := "csv filename not set"
-			err := httpreply.ToBadRequest(message).Send(w)
-
-			m.logger.ErrorC(r.Context(), "failed to write CSV response", logging.String("message", message), logging.Error(err))
-			return
-		}
-
-		if len(matchColumns) != 2 {
-			message := "csv columns not set"
-			err := httpreply.ToBadRequest(message).Send(w)
-
-			m.logger.ErrorC(r.Context(), "failed to write CSV response", logging.String("message", message), logging.Error(err))
-			return
-		}
-
-		columns := strings.Split(matchColumns[1], ",")
-
-		w.Header().Set("Content-Type", "text/csv")
-		w.Header().Set("Content-Disposition", fmt.Sprintf(`attachment; filename="%s.csv"`, matchFilename[1]))
-		err := resp.WriteCSV(w, columns)
-		if err != nil {
-			m.logger.ErrorC(r.Context(), "failed to write CSV response", logging.Error(err))
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-	} else {
-		marshalled, err := json.Marshal(resp)
-		if err != nil {
-			m.logger.ErrorC(r.Context(), "failed to marshal response", logging.Error(err))
-			return
-		}
-		w.WriteHeader(http.StatusOK)
-		w.Header().Set("Content-Type", "application/json")
-		_, err = w.Write(marshalled)
-		if err != nil {
-			m.logger.ErrorC(r.Context(), "failed to write response", logging.Error(err))
-		}
-	}
-}
-
-func (m queryResponseWriterBodyMapper[T]) Document(op *openapi3.Operation, specOps *handleradapters.SpecOps) {
-	m.defaultMapper.Document(op, specOps)
 }
